fix compile issues and reduce duplicated logging